sidebar alignment fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,7 +175,7 @@ aside.sidebar > section nav ul li a i {
 aside.sidebar > section nav ul li a:hover {
   color: #df8282;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   aside.sidebar > section {
     text-align: left;
   }
@@ -183,7 +183,7 @@ aside.sidebar > section nav ul li a:hover {
     padding: 0 2rem;
   }
   aside.sidebar > section nav ul li a {
-    justify-content: stretch;
+    justify-content: flex-start;
   }
 }
 @media (min-width: 992px) {
